# LearnOpenGL

./: CMakeLists.txt  Makefile
assets/shaders/: shader.frag  shader.vert  stencil.frag
include/: animation.hpp  animations.hpp  animator.hpp  assimp_glm_helper.hpp  assimp_to_glm.hpp  bone.hpp  buffers.hpp  camera.hpp  camera_manager.hpp  glad.h  mesh.hpp  model.hpp  render_buffer.hpp  shader.hpp  shaders.hpp  textures.hpp
shaders/: animated_model.fs  animated_model.vs  cube.fs  cube.vs  model.fs  model.vs  shader.fs
src/: animation.cpp  animations.cpp  animator.cpp  assimp_to_glm.cpp  bone.cpp  buffers.cpp  camera.cpp  camera_manager.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  render_buffer.cpp  shader.cpp  shaders.cpp  textures.cpp
